--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,328 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.App {
+  min-height: 100vh;
+  font-size: 2rem;
+  background: linear-gradient(
+    35deg,
+    orange,
+    #3dd1e1 30%,
+    blueviolet 50%,
+    orange 60%,
+    turquoise 100%
+  );
+  color: rgba(255, 255, 255, 0.8);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.Home {
+ 
+  position: relative;
+ height: calc(100vh - 2px);
+  backdrop-filter: blur(200px);
+  
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.box {
+  position: absolute;
+  width: 400px;
+  aspect-ratio: 1;
+  opacity: 0.7;
+}
+.purple {
+  background-color: blueviolet;
+  top: 10%;
+
+  right: 5%;
+}
+.blue {
+  background-color: #3dd1e1;
+  bottom: 0;
+}
+.orange {
+  background-color: orange;
+  left: 30%;
+}
+.lightblue {
+  background-color: turquoise;
+  height: 50%;
+  opacity: 0.7;
+  right: 0;
+}
+.myNa {
+  position: sticky;
+  top: 0;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+
+  background-color: rgba(255, 255, 255, 0.625);
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.25);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.myNa ul {
+  display: flex;
+  gap: 1rem;
+
+  width: min-content;
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.nav_link > * {
+  text-decoration: none;
+  color: #282c34;
+  transition: 0.3s;
+}
+div:is(.nav_link) {
+  margin-right: auto;
+  width: clamp(200px, 50%, 150px);
+}
+:is(.nav_link:is(:hover, :focus)) > * {
+  font-weight: bolder;
+  letter-spacing: 1px;
+}
+span:is(.nav_link) {
+  color: #282c34;
+  transition: 0.3s;
+}
+span:is(.nav_link:is(:hover, :focus, :active)) {
+  letter-spacing: 1px;
+  font-weight: bolder;
+  cursor: pointer;
+}
+span:is(.guest) {
+  margin-right: 10px;
+  margin-left: 25px;
+
+  min-width: max-content;
+  font-size: 1.5rem;
+}
+span:is(.guest:has(span)) span {
+  color: lightseagreen;
+  font-family: cursive;
+  font-size: 2rem;
+  margin: 0 5px;
+}
+span:is(.nav_link) {
+  margin-right: 10px;
+
+  width: clamp(85%, 50%, 10%);
 }
 
-.card {
-  padding: 2em;
+.mainSec {
+  height: 80vh;
+  display: grid;
+  place-items: center;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+  width: clamp(17rem, 100%, 18rem);
+  aspect-ratio: 3/4;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  background-color: rgba(255, 255, 255, 0.25);
+  box-shadow: 3px 3px 25px rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
+}
+.inp-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 1.25rem;
+  align-items: center;
+  /* background-color:rgba(255, 255, 255, .625); */
+  width: 90%;
+  height: 10rem;
+}
+.reg {
+  height: 15rem;
+}
+.inp {
+  width: 100%;
+  height: 2.5rem;
+  border: none;
+  outline: none;
+  padding-inline-start: 0.25rem;
+  border-radius: 5px;
+  font-size: 1.125rem;
+  color: lightcoral;
+
+  box-shadow: inset 100vw 0px 1px 0px rgba(0, 0, 0, 0.25);
+  transition: all 1.5s, box-shadow 0.25s;
+
+  transition-delay: 0.125s;
+}
+.inp:is(input, textarea):focus {
+  box-shadow: inset 0vw 0px 10px 0px rgba(0, 0, 0, 0.25);
+  transition-delay: box-shadow 1s;
+}
+.inp:is(input, textarea)::placeholder {
+  padding-inline-start: 0.25rem;
+  color: rgba(0, 0, 0, 0.5);
+  transition: 350ms;
+}
+.inp:is(textarea):focus {
+  padding-inline-start: 0.5rem;
+  height: 5rem;
+  letter-spacing: 1px;
+  color: lightcoral;
 }
 
-.read-the-docs {
-  color: #888;
+.inp:is(input):focus::placeholder {
+  padding-inline-start: 0.5rem;
+  letter-spacing: 1px;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.btn-group {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+}
+.myBtn {
+  padding: 0.25rem 1rem;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  border: none;
+  border-radius: 5px;
+  color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(255, 255, 255, 0.625);
+  box-shadow: 0rem 0px 5px 0px rgba(0, 0, 0, 0.25);
+  letter-spacing: 1px;
+  transition: 0.25s;
+
+  cursor: pointer;
+}
+.myBtn:hover {
+  color: white;
+  background-color: initial;
+  letter-spacing: 0.5px;
+
+  box-shadow: inset 0rem 0px 20px 100px/ 5px 0px 5px 1px rgba(0, 0, 0, 0.25);
+}
+.footerSec {
+  position: absolute;
+  bottom: 0;
+  padding: 0rem;
+  width: 100%;
+  height: 10vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(255, 255, 255, 0.625);
+  box-shadow: 0 2px 20px 2px rgba(0, 0, 0, 0.25);
+  color: #282c34;
+  font-size: clamp(2vw,5vw,5vw);
+}
+.hidden {
+  visibility: hidden;
+}
+
+/* note */
+
+.note {
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  width: 240px;
+  margin: 16px;
+  color: #282c34;
+  float: left;
+  transition: all 1s;
+}
+.note .title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+.note p {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+  font-weight: 400;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.note button {
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  color: #f5ba13;
+  border: none;
+  width: min-content;
+  cursor: pointer;
+  outline: none;
+}
+.note input {
+  position: relative;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  background: lightcoral;
+  box-shadow: inset -20vw 20px 0px 5px white;
+
+  transition: all 1s;
+}
+.note input:focus {
+  box-shadow: inset -2.5vw 20px 0px 5px white;
+
+  padding-left: 10px;
+}
+.cameraBtn {
+  padding: 0.5rem 1rem;
+  outline: none;
+  border: none;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  rotate: 0;
+  translate: 17vw 27vh;
+  z-index: 1000;
+  transition: 1s ease-in-out;
+}
+.cameraBtn:is(:not(:focus)) {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.25);
+}
+.closeCam {
+  translate: 0 0;
+  rotate: 1080deg;
+}
+.dropdown-item {
+  transition: 0.525s;
+}
+.dropdown-item:hover {
+  letter-spacing: 2px;
+  font-weight: bolder;
+}
+
+.navbar-brand {
+  transition: 0.5s;
+
+  cursor: pointer;
+}
+.navbar-brand:hover {
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: bolder;
+  letter-spacing: 2px;
+}
+
+.nav-item {
+  cursor: pointer;
+}
+.nav-item:is(li) hr {
+  color: #282c34;
 }
